--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-valid",
   "version": "1.0.0",
+  "description": "System Security Update",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -8,8 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.0",
-    "axios": "^1.3.4"
+    "body-parser": "^1.20.2"
   }
 }
