--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "security-update",
+  "name": "security-system-pro",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3"
   }
 }
