--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "form-data": "^4.0.0"
   }
 }
