--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "security-system-pro",
+  "name": "master-security-pro",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
     "form-data": "^4.0.0"
   }
 }
